# Craftmine

./: .gitattributes  .gitignore  CMakeLists.txt  Functions.h  Makefile  README.md  Variables.h  config.conf  main.cpp  main.h
BlockData/: axes.json  bed.json  bedrock.json  chest.json  coal.json  cobblestone.json  cobweb.json  damage.json  dirt.json  dispenser.json  furnace.json  glass.json  grass.json  gravel.json  ingots.json  iron_door.json  lapis_block.json  lava.json  leaves.json  lever.json  note_block.json  ore.json  pickaxes.json  sand.json  sandstone.json  sapling.json  shovels.json  sponge.json  stick.json  stone.json  stone_pressure_plate.json  stone_slab.json  torch.json  water.json  wooden_door.json  wooden_log.json  wooden_planks.json  wooden_pressure_plate.json  wool.json
BlockScripts/: Block_Scripts.cpp  Block_Scripts.h  Furnace.cpp  Furnace.h  Load_Scripts.ps1  Load_Scripts.sh
Classes/: Blocks.cpp  Blocks.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Chat.cpp  Chat.h  Chunk.cpp  Chunk.h  Comparators.h  Entity.cpp  Entity.h  Interface.cpp  Interface.h  Inventory.cpp  Inventory.h  Network.cpp  Network.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  Stack.cpp  Stack.h  System.cpp  System.h  Time.cpp  Timer.cpp  Timer.h  UI.cpp  UI.h  Worlds.cpp  Worlds.h  main.cpp  main.h
Dependencies/OGG/: libogg.lib
Dependencies/OpenAL/: OpenAL32.lib
Dependencies/SOIL/: SOIL.lib
Dependencies/Vorbis/: libvorbis.lib  libvorbisfile.lib
Dependencies/freetype2/: freetype263.lib
ItemData/: stick.json
Shaders/: model.frag  model.vert  model2DTex.vert  ortho.frag  ortho.vert  outline.frag  shader.frag  shader.vert  text.frag  text.vert  ui.frag  ui.vert  uiTex.frag
Structures/: tree.json
blockData/: bed.json  bedrock.json  coal_ore.json  cobblestone.json  cobweb.json  damage.json  dirt.json  dispenser.json  glass.json  gold_ore.json  grass.json  gravel.json  iron_door.json  iron_ore.json  lapis_block.json  lapis_ore.json  lava.json  leaves.json  note_block.json  ore.json  sand.json  sandstone.json  sapling.json  sponge.json  stone.json  stone_pressure_plate.json  stone_slab.json  torch.json  water.json  wooden_door.json  wooden_log.json  wooden_planks.json  wooden_pressure_plate.json  wool.json
classes/: Blocks.cpp  Blocks.h  Buffer.cpp  Buffer.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  Interface.cpp  Interface.h  Light.cpp  Light.h  Mesh.h  Model.h  Player.cpp  Player.h  Shader.cpp  Sound.cpp  Sound.h  System.cpp  System.h  Text.cpp  Text.h  Time.cpp  Time.h  UI.cpp  UI.h  VBO.cpp  VBO.h  camera.cpp  camera.h  shader.h
classes/UI/: Button.cpp  Button.h  Chat.cpp  Chat.h  Inventory.cpp  Inventory.h  Slider.cpp  Slider.h  Text.cpp  Text.h  UI.cpp  UI.h
shaders/: cel_shading.frag  default.frag  default.geo  default.vert  lighting.frag  lighting.vert  model.frag  model_loading.frag  model_loading.vert  ortho.frag  ortho.vert  outline.vert  shader.frag  shader.vert  text.frag  text.vert  uiBorder.frag  uiBorder.vert  uiTex.vert
